--- a/404.html
+++ b/404.html
@@ -29,12 +29,12 @@
 
 <!-- redirection to russian page -->
 <script type="text/javascript">
-  var languageinfo=navigator.language? navigator.language : navigator.userLanguage
+  var languageinfo = navigator.language ? navigator.language : navigator.userLanguage
   function redirectpage(dest) {
     if (window.location.replace) window.location.replace(dest)
-    else window.location=dest
+    else window.location = dest
   }
-  if (languageinfo.substr(0,2) == "ru") redirectpage("/ru/404")
+  if (languageinfo.substr(0,2) == "ru") redirectpage("/ru/404.html")
 </script>
 <!-- redirection to russian page -->
 
