--- a/_posts/2014-12-19-aw-v21-bells-and-whistles.html
+++ b/_posts/2014-12-19-aw-v21-bells-and-whistles.html
@@ -232,6 +232,12 @@ description: The paper deals with settings of a custom scripts and graphical bar
     <td>/usr/bin/true</td>
   </tr>
   <tr>
+    <th>X-AW-Filter</th>
+    <td>no</td>
+    <td>the regexp which will be applied to command output. If set <code>X-AW-Null</code> will be ignored.</td>
+    <td></td>
+  </tr>
+  <tr>
     <th>X-AW-Active</th>
     <td>no</td>
     <td>whether or not the upgrade script is active</td>
