update aw ext page

--- a/_posts/2014-12-19-aw-v21-bells-and-whistles.html
+++ b/_posts/2014-12-19-aw-v21-bells-and-whistles.html
@@ -288,19 +288,25 @@ description: The paper deals with settings of a custom scripts and graphical bar
   <tr>
     <th>X-AW-City</th>
     <td>yes</td>
-    <td>City</td>
+    <td>city</td>
     <td>London</td>
   </tr>
   <tr>
     <th>X-AW-Country</th>
     <td>yes</td>
-    <td>Two-letter country code</td>
+    <td>two-letter country code</td>
     <td>uk</td>
+  </tr>
+  <tr>
+    <th>X-AW-Image</th>
+    <td>no</td>
+    <td>use images as weather icon or text.</td>
+    <td>false</td>
   </tr>
   <tr>
     <th>X-AW-TS</th>
     <td>yes</td>
-    <td>Time to which weather should be. <code>0</code> is a current weather, <code>1</code> - weather 3 hours later, etc</td>
+    <td>time to which weather should be. <code>0</code> is a current weather, <code>1</code> - weather 3 hours later, etc</td>
     <td>0</td>
   </tr>
   <tr>
