--- a/ru/projects/awesome-widgets.html
+++ b/ru/projects/awesome-widgets.html
@@ -564,7 +564,23 @@ $down - $up
 {% raw %}}}{% endraw %}
 {% endhighlight %}
 
-<p>покажет разность между скоростями загрузки и отдачи. Таким образом, лямбда выражения могут быть использованы, например, чтобы показывать произвольное значение, которое будет рассчитано в рантайме, или, чтобы показать различную информацию, в зависимости от некоторых условий. Однако, пожалуйста, учитывайте, что подобные вычисления в рантайме могут увеличить нагрузку на CPU.</p>
+<p>покажет разность между скоростями загрузки и отдачи. Другая особенность, предоставляемая лямбда выражениями - тег <code>$this</code>, который вернет последнее значение данной лямбда функции. Ниже чуть более сложный пример, который покажет бегущую строку "Артист - Название" с длиной меньшей либо равной 10 символам:</p>
+
+{% highlight javascript %}
+{% raw %}${{{% endraw %}
+function runningLine() {
+    var current = "$artist - $title";
+    var index = current.indexOf("$this");
+    if (("$this" == "") || ((index + 20 + 1) > current.length))
+        return current.substring(0, 20);
+    else
+        return current.substring(index + 1, index + 20 + 1);
+}
+runningLine()
+{% raw %}}}{% endraw %}
+{% endhighlight %}
+
+<p>Таким образом, лямбда выражения могут быть использованы, например, чтобы показывать произвольное значение, которое будет рассчитано в рантайме, или, чтобы показать различную информацию, в зависимости от некоторых условий. Однако, пожалуйста, учитывайте, что подобные вычисления в рантайме могут увеличить нагрузку на CPU.</p>
 
 <h4><a href="#advanced" class="anchor" id="advanced"><span class="octicon octicon-link"></span></a>Расширенные настройки</h4>
 <p><b>Высота виджета:</b> Отключит автоматическое определение высоты виджета и установит ее в данное значение. По умолчанию <code>0</code> (автоматически).</p>
